dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=modestcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=modestcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=modestcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=modestcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=modestcoin-wallet.1
endif
endif
